--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "export": "next export"
   },
   "dependencies": {
+    "contentful": "^7.15.0",
     "next": "10.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.0.4",
+    "postcss": "^8.1.10",
+    "tailwindcss": "^2.0.1"
   }
 }
