--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "contentful": "^7.15.0",
     "moment": "^2.29.1",
     "next": "10.0.1",
+    "prismjs": "^1.22.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
