--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^14.1.2",
     "@contentful/rich-text-types": "^14.1.2",
+    "@react-three/fiber": "^6.2.1",
+    "@tweenjs/tween.js": "^18.6.4",
     "contentful": "^7.15.0",
+    "leva": "^0.9.10",
     "moment": "^2.29.1",
     "next": "10.0.1",
     "prismjs": "^1.22.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-three-gui": "^0.4.2",
+    "three": "^0.128.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.4",
