--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tweenjs/tween.js": "^18.6.4",
     "contentful": "^7.15.0",
     "leva": "^0.9.10",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "next": "10.0.1",
     "prismjs": "^1.22.0",
