--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@tweenjs/tween.js": "^18.6.4",
     "contentful": "^7.15.0",
     "leva": "^0.9.10",
+    "locomotive-scroll": "^4.1.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "next": "10.0.1",
-    "prismjs": "^1.22.0",
+    "next": "^10.2.3",
+    "prismjs": "^1.23.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-three-gui": "^0.4.2",
@@ -26,7 +27,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.0.4",
-    "postcss": "^8.1.10",
+    "postcss": "^8.3.0",
     "tailwindcss": "^2.0.1"
   }
 }
