--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@contentful/rich-text-react-renderer": "^14.1.2",
     "@contentful/rich-text-types": "^14.1.2",
     "@react-three/fiber": "^6.2.1",
+    "@svgr/webpack": "^5.5.0",
     "@tweenjs/tween.js": "^18.6.4",
     "contentful": "^7.15.0",
     "leva": "^0.9.10",
