--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@contentful/rich-text-types": "^14.1.2",
     "@react-three/fiber": "^6.2.1",
     "@svgr/webpack": "^5.5.0",
+    "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tweenjs/tween.js": "^18.6.4",
     "contentful": "^7.15.0",
     "leva": "^0.9.10",
@@ -23,6 +24,7 @@
     "prismjs": "^1.23.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-inlinesvg": "^2.3.0",
     "react-three-gui": "^0.4.2",
     "three": "^0.128.0"
   },
