--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "17.0.1",
     "react-inlinesvg": "^2.3.0",
     "react-three-gui": "^0.4.2",
+    "sass": "^1.34.0",
     "three": "^0.128.0"
   },
   "devDependencies": {
